# PoGoTelegramBot

./: .pylintrc  README.md  main.py  pyproject.toml
pogo_telegram_bot/: __init__.py
pogo_telegram_bot/controllers/: __init__.py  base.py
pogo_telegram_bot/services/: config.py  translations.py
pogo_telegram_bot/translations/it/LC_MESSAGES/: messages.po
